syntax = "proto3";

option csharp_namespace = "ACA.GrpcProtos";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
package GrpcProtos;


message ProcessProto {
  string id = 1;                // ID del proceso creado (GUID en string)
  string process_name = 2;
  string product_name = 3;
  repeated OperatorofProcess operators_in_process = 4;
  repeated SupervisorofProcess supervisors_in_process = 5;
}

message Processes 
{
	repeated ProcessProto processes = 1;
}


message Process
{
  string id = 1;                // ID del proceso creado (GUID en string)
  string process_name = 2;
  string product_name = 3;
}


message OperatorofProcess
{
  string id = 1; // Representación en string del Guid
  string operator_name = 2;
  string ci = 3;
  SchoolLevel school_level = 4;
  string assigned_supervisor_id = 5; // Representación en string del Guid (Nullable)
}



message SupervisorofProcess
{
  string id = 1;                  // ID del supervisor (GUID en string)
  string supervisor_name = 2;
  string ci = 3;
  SchoolLevel school_level = 4; 
}

enum SchoolLevel
{
	Medium = 0;
	High = 1;
	MediumTecnic = 2;
	University = 3;
}



message ProcesssGetRequest
{
	string id = 1;
}

message ProcessDeleteRequest
{
	string id = 1;
}

service ProcessServiceWeb {
  rpc CreateProcess (Process) returns (ProcessProto);
  rpc GetProcess (ProcesssGetRequest) returns (ProcessProto);
  rpc GetAllProcesses (google.protobuf.Empty) returns (Processes);
  rpc UpdateProcess (ProcessProto) returns (google.protobuf.Empty);
  rpc DeleteProcess (ProcessDeleteRequest) returns (google.protobuf.Empty);
}



